# ai-hackathon

./: LICENSE  README.md
Задание 1/: .env.example  .gitignore  README.md  docker-compose.yml  presentation.html
Задание 1/backend/: pyproject.toml
Задание 1/backend/app/: config.py  db.py  main.py
Задание 1/backend/app/api/: assemblies.py  barcodes.py  export.py  lookup.py  passports.py  receipts.py
Задание 1/backend/app/data/: vendors.yaml
Задание 1/backend/app/models/: __init__.py  assembly.py  passport.py  receipt.py
Задание 1/backend/app/prompts/: llm_extraction.txt  vlm_extraction.txt
Задание 1/backend/app/schemas/: __init__.py  assembly.py  passport.py  receipt.py
Задание 1/backend/app/services/: attribute_bboxes.py  barcode_gen.py  checklist_pdf.py  classify.py  extraction.py  feedback.py  ingest.py  llm_client.py  merge.py  ocr_client.py  onec_export.py  preprocess.py  validate.py  vendors.py  vlm_client.py
Задание 1/backend/tests/: test_api_assemblies.py  test_api_receipts.py  test_barcode_gen.py  test_classify.py  test_feedback.py  test_health.py  test_ingest.py  test_merge.py  test_models.py  test_onec_export.py  test_schemas.py  test_validate.py  test_vendors.py
Задание 1/backend/tests/golden/: prilozhenie_1.json  prilozhenie_2.json  prilozhenie_3.json  test_golden.py
Задание 1/frontend/: package-lock.json  package.json
Задание 1/ocr_service/: Dockerfile  main.py  pyproject.toml
Задание 3/: presentation.html  Пример выходного файла.csv
Задание 3/sensor_diag/: .gitignore  Makefile  README.md  diagnostics.c  diagnostics.h  main.c  (+24 more)
(+17 files in other folders)
